test/sematest/invalid/redefinition_of_variable_in_same_scope2.java
class A {
  public static void main(String[] args) {
    int a;
    int a;
  }
}